--- a/MunchkinAndroid/res/layout/fight.xml
+++ b/MunchkinAndroid/res/layout/fight.xml
@@ -2,293 +2,320 @@
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
+	android:id="@+id/relativeLayout1"
 	android:orientation="vertical"
+	android:layout_height="fill_parent"
 	style="@style/LightBrownTheme"
 >
-	<TextView
-		android:id="@+id/textView1"
+	<RelativeLayout
+		android:id="@+id/linearLayout7"
 		android:layout_height="wrap_content"
-		android:layout_gravity="center|center_horizontal"
-		android:text="Fight"
 		android:layout_width="fill_parent"
-		style="@style/BaseText"
-		android:paddingBottom="5dip"
-	></TextView>
+	>
+		<TextView
+			style="@style/BaseText"
+			android:layout_gravity="center_horizontal"
+			android:text="Fight"
+			android:layout_height="wrap_content"
+			android:layout_width="wrap_content"
+			android:paddingBottom="5dip"
+			android:layout_centerHorizontal="true"
+			android:id="@+id/fight_top_title"
+		></TextView>
+		<ImageView
+			android:layout_height="wrap_content"
+			android:layout_width="wrap_content"
+			android:layout_alignParentTop="true"
+			android:layout_alignParentLeft="true"
+			android:src="@drawable/back"
+			android:id="@+id/fight_back_button"
+		></ImageView>
+	</RelativeLayout>
 	<LinearLayout
+		android:id="@+id/linearLayout6"
 		android:layout_width="fill_parent"
-		android:id="@+id/relativeLayout1"
 		android:orientation="vertical"
 		android:layout_height="fill_parent"
 	>
 		<LinearLayout
-			android:layout_centerHorizontal="true"
-			android:id="@+id/linearLayout5"
-			android:layout_alignParentTop="true"
-			android:orientation="vertical"
-			android:layout_width="fill_parent"
 			android:paddingTop="2dip"
-		android:layout_weight="1" android:layout_height="fill_parent">
+			android:id="@+id/linearLayout5"
+			android:layout_height="fill_parent"
+			android:layout_width="fill_parent"
+			android:layout_weight="1"
+			android:orientation="vertical"
+		>
 			<TextView
-				android:text="Player"
 				style="@style/SubHeading"
-				android:layout_width="wrap_content"
+				android:layout_gravity="center"
+				android:text="Player"
 				android:layout_height="wrap_content"
+				android:layout_width="wrap_content"
 				android:id="@+id/fight_player_title"
-				android:layout_gravity="center" android:paddingBottom="5dip"></TextView>
+				android:paddingBottom="5dip"
+			></TextView>
 			<LinearLayout
 				android:id="@+id/fight_player_box"
-				android:background="#3d1902"
-				android:layout_gravity="center_horizontal"
-				android:layout_width="fill_parent" android:layout_height="wrap_content">
-				<View
-					android:id="@+id/view1"
-					android:layout_width="fill_parent"
-					android:layout_height="fill_parent"
-					style="@style/LightBrownTheme"
-					android:layout_weight="3"
-				></View>
-				<LinearLayout
-					style="@style/LightBrownTheme"
-					android:layout_weight="1"
-					android:id="@+id/linearLayout1"
-					android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5dip">
-					<LinearLayout
-						android:layout_weight="1"
-						android:layout_gravity="right"
-						android:id="@+id/linearLayout2"
-						android:layout_width="fill_parent"
-						android:layout_height="fill_parent"
-						android:orientation="vertical"
-					>
-						<TextView
-							android:text="Score:"
-							style="@style/SmallText"
-							android:layout_gravity="right"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:id="@+id/textView3"
-						></TextView>
-						<TextView
-							android:text="Change:"
-							style="@style/SmallText"
-							android:layout_gravity="right"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:id="@+id/textView2"
-						></TextView>
-					</LinearLayout>
-					<LinearLayout
-						android:layout_weight="1"
-						android:gravity="center"
-						android:id="@+id/linearLayout3"
-						android:layout_width="fill_parent"
-						android:layout_height="fill_parent"
-						android:orientation="vertical"
-					>
-						<TextView
-							android:text="7"
-							style="@style/SmallText"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:id="@+id/textView4"
-						></TextView>
-						<TextView
-							android:text="2"
-							style="@style/SmallText"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:id="@+id/textView5"
-						></TextView>
-					</LinearLayout>
-					<LinearLayout
-						android:layout_weight="1"
-						android:id="@+id/linearLayout4"
-						android:layout_width="fill_parent"
-						android:layout_height="wrap_content"
-						android:orientation="vertical"
-					>
-						<TextView
-							android:text="Total"
-							style="@style/SmallText"
-							android:layout_gravity="center"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:id="@+id/textView6"
-						></TextView>
-						<TextView
-							android:text="10"
-							style="@style/SmallText"
-							android:layout_gravity="center"
-							android:layout_width="wrap_content"
-							android:layout_height="wrap_content"
-							android:id="@+id/textView7"
-						></TextView>
-					</LinearLayout>
-				</LinearLayout>
-				<View
-					android:layout_width="fill_parent"
-					android:id="@+id/View01"
-					android:layout_height="fill_parent"
-					style="@style/LightBrownTheme"
-					android:layout_weight="3"
-				></View>
-			</LinearLayout>
-			<LinearLayout
-				android:layout_width="wrap_content"
-				android:id="@+id/player_button_layout"
 				android:layout_height="wrap_content"
-				android:layout_gravity="center" android:layout_weight="1" android:gravity="center">
-				<ImageView
-					android:src="@drawable/up"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:id="@+id/imageView1"
-				></ImageView>
-				<ImageView android:src="@drawable/down" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/imageView2"></ImageView>
-			</LinearLayout>
-		</LinearLayout>
-		<TextView
-			android:text="Win Text"
-			style="@style/BaseText"
-			android:layout_width="wrap_content"
-			android:id="@+id/textView8"
-			android:layout_centerInParent="true"
-		android:layout_height="fill_parent" android:layout_weight="1" android:layout_gravity="center_horizontal"></TextView>
-		<LinearLayout
-			android:layout_width="fill_parent"
-			android:id="@+id/LinearLayout03"
-			android:orientation="vertical"
-			android:layout_alignParentLeft="true"
-			android:layout_alignParentBottom="true"
-		android:layout_height="fill_parent" android:layout_weight="1">
-			<TextView
-				android:text="Player"
-				style="@style/SubHeading"
-				android:layout_gravity="center"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:id="@+id/TextView03"
-			android:paddingBottom="5dip"></TextView>
-			<LinearLayout
-				android:layout_gravity="center_horizontal"
-				android:id="@+id/LinearLayout01"
 				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:background="#3d1902"
+				android:layout_gravity="center_horizontal"
 			>
-				<View
-					style="@style/LightBrownTheme"
-					android:layout_width="fill_parent"
-					android:layout_height="fill_parent"
-					android:id="@+id/View03"
-					android:layout_weight="3"
-				></View>
 				<LinearLayout
-					style="@style/LightBrownTheme"
-					android:layout_weight="1"
-					android:id="@+id/LinearLayout06"
-					android:layout_width="fill_parent"
+					android:id="@+id/linearLayout1"
 					android:layout_height="wrap_content"
-				android:layout_margin="5dip">
+					android:layout_width="fill_parent"
+					android:layout_weight="1"
+					style="@style/DarkBrownTheme"
+				>
 					<LinearLayout
+						android:id="@+id/linearLayout2"
+						android:layout_height="fill_parent"
+						android:layout_width="fill_parent"
 						android:layout_weight="1"
 						android:layout_gravity="right"
-						android:id="@+id/LinearLayout04"
-						android:layout_width="fill_parent"
-						android:layout_height="fill_parent"
 						android:orientation="vertical"
+						style="@style/LightBrownTheme"
 					>
 						<TextView
+							style="@style/SmallText"
+							android:layout_gravity="right"
 							android:text="Score:"
-							style="@style/SmallText"
-							android:layout_gravity="right"
-							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
-							android:id="@+id/TextView04"
+							android:layout_width="wrap_content"
+							android:id="@+id/fight_player_score_title"
 						></TextView>
 						<TextView
+							style="@style/SmallText"
+							android:layout_gravity="right"
 							android:text="Change:"
-							style="@style/SmallText"
-							android:layout_gravity="right"
-							android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
-							android:id="@+id/TextView01"
+							android:layout_width="wrap_content"
+							android:id="@+id/fight_player_change_title"
 						></TextView>
 					</LinearLayout>
 					<LinearLayout
-						android:layout_weight="1"
-						android:gravity="center"
-						android:id="@+id/LinearLayout05"
-						android:layout_width="fill_parent"
+						android:id="@+id/linearLayout3"
 						android:layout_height="fill_parent"
+						android:layout_width="fill_parent"
+						android:layout_weight="1"
 						android:orientation="vertical"
+						style="@style/LightBrownTheme"
+						android:gravity="center"
 					>
 						<TextView
-							android:text="7"
 							style="@style/SmallText"
-							android:layout_width="wrap_content"
+							android:text="7"
 							android:layout_height="wrap_content"
-							android:id="@+id/TextView02"
+							android:layout_width="wrap_content"
+							android:id="@+id/fight_player_score"
 						></TextView>
 						<TextView
-							android:text="2"
 							style="@style/SmallText"
-							android:layout_width="wrap_content"
+							android:text="2"
 							android:layout_height="wrap_content"
-							android:id="@+id/TextView06"
+							android:layout_width="wrap_content"
+							android:id="@+id/fight_player_change"
 						></TextView>
 					</LinearLayout>
 					<LinearLayout
-						android:layout_weight="1"
-						android:id="@+id/LinearLayout02"
-						android:layout_width="fill_parent"
+						android:id="@+id/linearLayout4"
 						android:layout_height="wrap_content"
+						android:layout_width="fill_parent"
+						android:layout_weight="1"
+						android:layout_margin="1dip"
 						android:orientation="vertical"
+						style="@style/LightBrownTheme"
 					>
 						<TextView
-							android:text="Total"
 							style="@style/SmallText"
 							android:layout_gravity="center"
-							android:layout_width="wrap_content"
+							android:text="Total"
 							android:layout_height="wrap_content"
-							android:id="@+id/TextView05"
+							android:layout_width="wrap_content"
+							android:id="@+id/fight_player_total_title"
 						></TextView>
 						<TextView
-							android:text="10"
 							style="@style/SmallText"
 							android:layout_gravity="center"
-							android:layout_width="wrap_content"
+							android:text="10"
 							android:layout_height="wrap_content"
-							android:id="@+id/TextView07"
+							android:layout_width="wrap_content"
+							android:id="@+id/fight_player_total"
 						></TextView>
 					</LinearLayout>
 				</LinearLayout>
-				<View
-					style="@style/LightBrownTheme"
-					android:layout_width="fill_parent"
-					android:layout_height="fill_parent"
-					android:id="@+id/View02"
-					android:layout_weight="3"
-				></View>
+				<ImageView
+					android:layout_height="wrap_content"
+					android:layout_width="wrap_content"
+					android:src="@drawable/refresh"
+				android:id="@+id/fight_player_reset"></ImageView>
 			</LinearLayout>
 			<LinearLayout
-				android:layout_gravity="center"
-				android:id="@+id/LinearLayout07"
+				android:id="@+id/player_button_layout"
 				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-			android:layout_weight="1" android:gravity="center">
+				android:layout_weight="1"
+				android:layout_gravity="center"
+				android:gravity="center"
+			android:layout_height="fill_parent">
 				<ImageView
 					android:src="@drawable/up"
-					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:id="@+id/ImageView01"
+					android:layout_width="wrap_content"
+					android:id="@+id/fight_player_up"
 				></ImageView>
 				<ImageView
 					android:src="@drawable/down"
-					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:id="@+id/ImageView02"
+					android:layout_width="wrap_content"
+					android:id="@+id/fight_player_down"
+				></ImageView>
+			</LinearLayout>
+		</LinearLayout>
+		<TextView
+			style="@style/BaseText"
+			android:layout_gravity="center_horizontal"
+			android:text="Win Text"
+			android:layout_height="fill_parent"
+			android:layout_width="wrap_content"
+			android:id="@+id/fight_win_text" android:layout_weight="1"></TextView>
+		<LinearLayout
+			android:id="@+id/LinearLayout03"
+			android:layout_height="fill_parent"
+			android:layout_width="fill_parent"
+			android:layout_weight="1"
+			android:orientation="vertical"
+		>
+			<TextView
+				style="@style/SubHeading"
+				android:layout_gravity="center"
+				android:text="Monster"
+				android:layout_height="wrap_content"
+				android:layout_width="wrap_content"
+				android:id="@+id/fight_monster_title"
+			></TextView>
+			<TextView
+				android:layout_gravity="center"
+				android:layout_height="wrap_content"
+				android:layout_width="wrap_content"
+				android:id="@+id/textView1"
+				android:paddingBottom="2dip"
+				android:text="Press below to set score"
+			></TextView>
+			<LinearLayout
+				android:id="@+id/LinearLayout01"
+				android:layout_height="wrap_content"
+				android:layout_width="fill_parent"
+				android:layout_gravity="center_horizontal"
+				style="@style/DarkBrownTheme"
+			>
+				<LinearLayout
+					android:layout_width="fill_parent"
+					android:layout_weight="1"
+					style="@style/DarkBrownTheme"
+					android:id="@+id/fight_monster_InfoLayout"
+					android:layout_height="fill_parent"
+				>
+					<LinearLayout
+						android:id="@+id/LinearLayout04"
+						android:layout_height="fill_parent"
+						android:layout_width="fill_parent"
+						android:layout_weight="1"
+						android:layout_gravity="right"
+						android:orientation="vertical"
+						style="@style/LightBrownTheme"
+					>
+						<TextView
+							style="@style/SmallText"
+							android:layout_gravity="right"
+							android:text="Score:"
+							android:layout_height="wrap_content"
+							android:layout_width="wrap_content"
+							android:id="@+id/fight_monster_score_title"
+						></TextView>
+						<TextView
+							style="@style/SmallText"
+							android:layout_gravity="right"
+							android:text="Change:"
+							android:layout_height="wrap_content"
+							android:layout_width="wrap_content"
+							android:id="@+id/fight_monster_change_title"
+						></TextView>
+					</LinearLayout>
+					<LinearLayout
+						android:id="@+id/LinearLayout05"
+						android:layout_height="fill_parent"
+						android:layout_width="fill_parent"
+						android:layout_weight="1"
+						android:orientation="vertical"
+						style="@style/LightBrownTheme"
+						android:gravity="center"
+					>
+						<TextView
+							style="@style/SmallText"
+							android:text="7"
+							android:layout_height="wrap_content"
+							android:layout_width="wrap_content"
+							android:id="@+id/fight_monster_score"
+						></TextView>
+						<TextView
+							style="@style/SmallText"
+							android:text="2"
+							android:layout_height="wrap_content"
+							android:layout_width="wrap_content"
+							android:id="@+id/fight_monster_change"
+						></TextView>
+					</LinearLayout>
+					<LinearLayout
+						android:id="@+id/LinearLayout02"
+						android:layout_width="fill_parent"
+						android:layout_weight="1"
+						android:orientation="vertical"
+						style="@style/LightBrownTheme"
+						android:layout_height="fill_parent"
+					android:layout_margin="1dip">
+						<TextView
+							style="@style/SmallText"
+							android:layout_gravity="center"
+							android:text="Total"
+							android:layout_height="wrap_content"
+							android:layout_width="wrap_content"
+							android:id="@+id/fight_monster_total_title"
+						></TextView>
+						<TextView
+							style="@style/SmallText"
+							android:layout_gravity="center"
+							android:text="10"
+							android:layout_height="wrap_content"
+							android:layout_width="wrap_content"
+							android:id="@+id/fight_monster_total"
+						></TextView>
+					</LinearLayout>
+				</LinearLayout>
+				<ImageView
+					android:src="@drawable/refresh"
+					style="@style/LightBrownTheme"
+					android:layout_width="wrap_content"
+					android:id="@+id/fight_monster_reset"
+				android:layout_height="fill_parent"></ImageView>
+			</LinearLayout>
+			<LinearLayout
+				android:id="@+id/LinearLayout07"
+				android:layout_height="wrap_content"
+				android:layout_width="wrap_content"
+				android:layout_gravity="center"
+				android:gravity="center"
+			android:layout_weight="1">
+				<ImageView
+					android:src="@drawable/up"
+					android:layout_height="wrap_content"
+					android:layout_width="wrap_content"
+					android:id="@+id/fight_monster_up"
+				></ImageView>
+				<ImageView
+					android:src="@drawable/down"
+					android:layout_height="wrap_content"
+					android:layout_width="wrap_content"
+					android:id="@+id/fight_monster_down"
 				></ImageView>
 			</LinearLayout>
 		</LinearLayout>
