--- a/MunchkinAndroid/res/layout/gear_dialog.xml
+++ b/MunchkinAndroid/res/layout/gear_dialog.xml
@@ -4,47 +4,25 @@
 	android:orientation="vertical"
 	android:padding="2dip"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
+	android:layout_height="fill_parent" style="@style/LightBrownTheme">
+    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Edit Gear Information" style="@style/SmallText" android:layout_gravity="center_horizontal"></TextView>
 	<LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		android:layout_weight="1"
-		android:orientation="horizontal">
-		<TextView
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:text="Bonus Amount:" />
-		<EditText
-			android:id="@+id/gear_dialog_bonus_text"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:inputType="numberSigned" />
+		android:orientation="vertical" android:layout_weight="1">
+		<LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_width="fill_parent">
+			<TextView android:id="@+id/textView3" style="@style/SmallText" android:layout_height="wrap_content" android:text="Bonus:" android:layout_weight="2" android:layout_width="fill_parent"></TextView>
+			<EditText android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="fill_parent" android:id="@+id/gear_dialog_bonus_text" android:inputType="numberSigned"></EditText>
+		</LinearLayout>
+		<LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:orientation="horizontal" android:layout_weight="1" android:layout_height="wrap_content">
+			<TextView android:id="@+id/textView2" style="@style/SmallText" android:layout_height="wrap_content" android:singleLine="false" android:text="Armor:" android:layout_weight="2" android:layout_width="fill_parent"></TextView>
+			<Spinner android:layout_width="fill_parent" android:prompt="@string/armor_prompt" android:id="@+id/gear_dialog_armor_type" android:layout_height="wrap_content" android:layout_weight="1"></Spinner>
+		</LinearLayout>
 	</LinearLayout>
 	<LinearLayout
 		android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_weight="1"
-		android:orientation="horizontal">
-		<TextView
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:singleLine="false"
-			android:text="Armor Type:" />
-		<Spinner
-			android:id="@+id/gear_dialog_armor_type"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:prompt="@string/armor_prompt" />
-	</LinearLayout>
-	<LinearLayout
-		android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-		android:orientation="horizontal">
+                android:orientation="horizontal" android:layout_weight="1">
 		<Button
 			android:id="@+id/gear_dialog_add_button"
 			android:layout_width="fill_parent"
